<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/bumpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bump_string" />

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ready" />
        <!--
        <Button
            android:id="@+id/testBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test" />
        -->

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/breed_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/breed" />

        <RadioButton
            android:id="@+id/trade_option"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trade" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.01"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello" />

        <ImageView
            android:id="@+id/dog_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center" />

        <!--
             <TextView
            android:id="@+id/testTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test" /> -->

    </LinearLayout>

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:choiceMode="singleChoice" >
    </ListView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/newButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/newDogString" />

        <Button
            android:id="@+id/edit_name_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.50"
            android:text="@string/edit_name_string" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.52"
            android:text="@string/deleteDogString" />
    </LinearLayout>

</LinearLayout>